fix: styling dark mode navbar toggler

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -113,6 +113,10 @@ h6 {
   border: 2px solid rgba(33, 37, 41, 0.05);
 }
 
+.navbar-toggler {
+  font-size: 1rem;
+}
+
 .dark-mode .hero p,
 .dark-mode .text-hightlight,
 .dark-mode #projects .text-title,
@@ -127,6 +131,14 @@ h6 {
 .dark-mode .hero .btn-dark {
   background-color: $background-color !important;
   color: $text-color !important;
+}
+
+.dark-mode .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30' style='&%2310;'%3E%3Cpath stroke='rgb(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22' style='&%2310;'/%3E%3C/svg%3E");
+}
+
+.dark-mode .navbar-toggler {
+  border-color: rgba(255, 255, 255, 0.50);
 }
 
 //media query for mobile
